--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,1 +1,8 @@
-{}
+{
+  "verify-title": "verify-title",
+  "verify-paragraph": "verify-paragraph",
+  "verify-email-button": "verify-email-button",
+  "verify-thanks": "verify-thanks",
+  "The Template Team": "The Template Team",
+  "verify-footer-text": "verify-footer-text"
+}
