--- a/locales/es.json
+++ b/locales/es.json
@@ -4,5 +4,6 @@
   "verify-email-button": "verify-email-button",
   "verify-thanks": "verify-thanks",
   "The Template Team": "The Template Team",
-  "verify-footer-text": "verify-footer-text"
+  "verify-footer-text": "verify-footer-text",
+  "verify-team": "verify-team"
 }
