Implement me query

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -3,5 +3,6 @@
   "signUpFailed": "Sign up failed",
   "welcome": "Welcome, {{firstName}}!",
   "welcomeExistingUser": "Welcome back, {{firstName}}!",
-  "incorrectEmailPassword": "Incorrect email or password"
+  "incorrectEmailPassword": "Incorrect email or password",
+  "userBanned": "You're account has been banned"
 }
