--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -4,5 +4,7 @@
   "welcome": "Welcome, {{firstName}}!",
   "welcomeExistingUser": "Welcome back, {{firstName}}!",
   "incorrectEmailPassword": "Incorrect email or password",
-  "BANNED": "Your account has been banned"
+  "BANNED": "Your account has been banned",
+  "sentVerificationEmail": "If you have an account, we would send an email to {{email}} with further instructions.",
+  "waitForVerificationInterval": "Wait a few minutes before requesting again."
 }
