--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -5,6 +5,5 @@
   "welcomeExistingUser": "Welcome back, {{firstName}}!",
   "incorrectEmailPassword": "Incorrect email or password",
   "BANNED": "Your account has been banned",
-  "sentVerificationEmail": "If you have an account, we would send an email to {{email}} with further instructions.",
-  "waitForVerificationInterval": "Wait a few minutes before requesting again."
+  "sentVerificationEmail": "If you have an account, we would send an email to {{email}} with further instructions."
 }
