--- a/locales/en.json
+++ b/locales/en.json
@@ -4,5 +4,7 @@
   "verify-email-button": "Verify Email",
   "verify-footer-text": "If you're having trouble clicking the button, copy and paste the URL below into your web browser.",
   "verify-thanks": "Thanks,",
-  "verify-team": "The Template Team"
+  "verify-team": "The Template Team",
+  "reset-title": "Reset password",
+  "reset-password-button": "Reset"
 }
