--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,9 +1,4 @@
 {
-  "verify-title": "verify-title",
-  "verify-paragraph": "verify-paragraph",
-  "verify-email-button": "verify-email-button",
-  "verify-thanks": "verify-thanks",
-  "The Template Team": "The Template Team",
-  "verify-footer-text": "verify-footer-text",
-  "verify-team": "verify-team"
+  "reset-title": "reset-title",
+  "reset-password-button": "reset-password-button"
 }
