request delete account

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,5 +6,7 @@
   "verify-thanks": "Thanks,",
   "verify-team": "The Template Team",
   "reset-title": "Reset password",
-  "reset-password-button": "Reset"
+  "reset-password-button": "Reset",
+  "delete-title": "delete-title",
+  "delete-account-button": "delete-account-button"
 }
