--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -4,8 +4,9 @@
   "welcome": "Welcome, {{firstName}}!",
   "welcomeExistingUser": "Welcome back, {{firstName}}!",
   "incorrectEmailPassword": "Incorrect email or password",
-  "sentInstructionsEmail": "We have sent an email to {{email}} with further instructions.",
-  "invalidLink": "The link you followed is invalid.",
+  "sentInstructionsEmail": "We have sent an email to {{email}} with further instructions",
+  "invalidLink": "The link you followed is invalid",
   "passwordChanged": "Login with your new password to continue",
-  "accountDeleted": "Your account is deleted"
+  "accountDeleted": "Your account is deleted",
+  "loggedOut": "You've logged out"
 }
