--- a/locales/emails/en.json
+++ b/locales/emails/en.json
@@ -1,5 +1,11 @@
 {
   "reset-title": "reset-title",
   "reset-password-button": "reset-password-button",
-  "otp-title": "otp-title"
+  "otp-title": "otp-title",
+  "verify-title": "verify-title",
+  "verify-paragraph": "verify-paragraph",
+  "verify-email-button": "verify-email-button",
+  "verify-thanks": "verify-thanks",
+  "verify-team": "verify-team",
+  "verify-footer-text": "verify-footer-text"
 }
