--- a/locales/dictionaries/en/translation.json
+++ b/locales/dictionaries/en/translation.json
@@ -1,3 +1,4 @@
 {
-	"SignUpFailed": "Sign up failed"
+  "SignUpFailed": "Sign up failed",
+  "IncorrectUsernameOrPassword": "Incorrect username or password"
 }
