--- a/locales/dictionaries/en/translation.json
+++ b/locales/dictionaries/en/translation.json
@@ -5,5 +5,6 @@
   "EmailVerificationFailed": "Your email address could not be verified.",
   "TokenInvalidError": "Your token is invalid.",
   "SentVerificationEmail": "We have sent an email with a confirmation link to your email address.",
-  "UsernameUnavailableError": "Username is already taken."
+  "UsernameUnavailableError": "Username is already taken.",
+  "UserEmailUnavailableError": "Email is already registered."
 }
