--- a/locales/dictionaries/en/translation.json
+++ b/locales/dictionaries/en/translation.json
@@ -6,5 +6,6 @@
   "TokenInvalidError": "Your token is invalid.",
   "SentVerificationEmail": "We have sent an email with a confirmation link to your email address.",
   "UsernameUnavailableError": "Username is already taken.",
-  "UserEmailUnavailableError": "Email is already registered."
+  "UserEmailUnavailableError": "Email is already registered.",
+  "RoleNameUniqueError": "Role name already exists."
 }
