--- a/locales/dictionaries/en/translation.json
+++ b/locales/dictionaries/en/translation.json
@@ -1,6 +1,7 @@
 {
   "SignUpFailed": "Sign up failed",
   "IncorrectUsernameOrPassword": "Incorrect username or password.",
+  "EmailVerified": "Your email has been successfully verified.",
   "EmailNotVerified": "Verify your email address.",
   "EmailVerificationFailed": "Your email address could not be verified.",
   "TokenInvalidError": "Your token is invalid.",
