--- a/locales/dictionaries/en/translation.json
+++ b/locales/dictionaries/en/translation.json
@@ -17,5 +17,6 @@
   "Unauthorized": "You do not have the necessary permissions.",
   "SomethingWentWrong": "Sorry, we ran into a problem.",
   "InvalidClientId": "It seems your client has been tempered with. We've reported to our security engineers for your safety.",
-  "UserNotFound": "Account does not exist."
+  "UserNotFound": "Account does not exist.",
+  "ProfileUpdated": "Profile updated."
 }
