--- a/locales/dictionaries/en/translation.json
+++ b/locales/dictionaries/en/translation.json
@@ -24,5 +24,6 @@
   "SentSmsOtp": "We've sent you a verification token.",
   "LoggedOut": "Signed out",
   "PhoneNumberVerified": "Your phone number has been successfully verified.",
-  "NothingToUpload": "Select a file to upload."
+  "NothingToUpload": "Select a file to upload.",
+  "UserUsernameInvalidFormatError": "Username should only contain letters, numbers, and underscore."
 }
