--- a/locales/dictionaries/en/translation.json
+++ b/locales/dictionaries/en/translation.json
@@ -25,5 +25,7 @@
   "LoggedOut": "Signed out",
   "PhoneNumberVerified": "Your phone number has been successfully verified.",
   "NothingToUpload": "Select a file to upload.",
-  "UserUsernameInvalidFormatError": "Username should only contain letters, numbers, and underscore."
+  "UserUsernameInvalidFormatError": "Username should only contain letters, numbers, and underscore.",
+  "IncorrectPasswordError": "Incorrect password.",
+  "PasswordUpdated": "Your password has been updated."
 }
